# ml3-rust

./: Cargo.toml  README.md  java_perf.csv  perf_plot.py  reproduce.py  topo_100_city.json
benches/: my_benchmark.rs
custom_sir/: Cargo.toml
custom_sir/benches/: my_benchmark.rs
custom_sir/examples/: compute_stepnum.rs  inf.rs  make_ref.rs
custom_sir/src/: lib.rs  main.rs
examples/: inf_sir_on_grid.rs  multi_edges.rs  routes.rs  scratch.rs  sir_on_grid.rs
linked_lives_macros/: Cargo.toml
linked_lives_macros/src/: lib.rs
ml3_java/: infinite_sir.ml3  pom.xml  run.bat  run.sh  sir.ml3
ml3_java/src/main/java/: Grid.java  InfinieSIRExperiment.java  InfiniteSIRMain.java  Main.java  PerformanceExperiment.java
netlogo/: sir.nlogo
src/: lib.rs  main.rs  simulation.rs  tests.rs
