[package]
name = "linked_lives"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
assert_float_eq = "1.1.3"

indicatif = {version = "0.16.2", features = ["rayon"]}
hashbag = "0.1.5"
itertools = "0.10.0"
array-macro = "2.1.0"
serde_json = "1.0"
rayon = "1.5.1"
streaming-stats = "0.2.3"
serde = { version = "1.0", features = ["derive"] }

linked_lives_macros = {path = "linked_lives_macros"}


[lib]
name = "linked_lives"
path = "src/lib.rs"



[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
