[package]
name = "custom_ssa"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="0.8.5",features=["small_rng"]}
rand_distr = "0.4.3"
assert_float_eq = "1.1.3"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.3"

[lib]
name = "custom_sir"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
