[package]
name = "linked_lives_macros"
version = "0.0.0"
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version="1.0",extra-traits=true}
global_counter = "0.2.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
